--- a/source/java/admin-webapp/src/scripts/system/system.html
+++ b/source/java/admin-webapp/src/scripts/system/system.html
@@ -2,21 +2,21 @@
 
     <div class="col-xs-12 node-list front-page">
         <div class="header">
-            <span class="light-print">Nodes</span>
-            <a data-href="/nodes/new" class="pull-right" ng-click="addingnode = true;">Add a Node</a>
+            <span class="light-print" translate>system.l_nodes</span>
+            <a data-href="/nodes/new" class="pull-right" ng-click="addingnode = true;" translate>system.l_add_node</a>
         </div>
         <div class="nodes-container table-container">
             <table class="default">
                 <thead>
                     <th></th>
-                    <th>Node Name</th>
-                    <th>Site</th>
-                    <th>Local Domain</th>
-                    <th>HW</th>
-                    <th>OM</th>
-                    <th>SM</th>
-                    <th>DM</th>
-                    <th>AM</th>
+                    <th translate>system.th_node_name</th>
+                    <th translate>system.th_site</th>
+                    <th translate>system.th_local_domain</th>
+                    <th translate>system.th_hw</th>
+                    <th translate>system.th_om</th>
+                    <th translate>system.th_sm</th>
+                    <th translate>system.th_dm</th>
+                    <th translate>system.th_am</th>
                     <th></th>
                 </thead>
                 <tbody>
