--- a/source/java/admin-webapp/src/scripts/users/users.html
+++ b/source/java/admin-webapp/src/scripts/users/users.html
@@ -3,7 +3,7 @@
     <div class="coming-soon-parent" ng-show="!isAllowed( 'SYS_MGMT' )">
         <div class="coming-soon-child">
             <div style="">
-                <span style="color: white;">Coming soon...</span>
+                <span style="color: white;" translate>common.coming_soon</span>
             </div>
         </div>
     </div>
@@ -11,8 +11,8 @@
     <div class="header top-label">
 
         <div>
-            <span>Users</span>
-            <a ng-click="createNewUser()" class=" add-user-link pull-right">Create User</a>
+            <span translate>users.title</span>
+            <a ng-click="createNewUser()" class=" add-user-link pull-right" translate>users.l_create_user</a>
         </div>
 
         <div style="position: relative;width: 100%;padding-top: 12px;" class="clearfix">
@@ -34,7 +34,7 @@
         <table class="default">
             <thead>
                 <th><input type="checkbox" /></th>
-                <th>Name</th>
+                <th translate>common.th_name</th>
 <!--
                 <th>Tenant</th>
                 <th>Role</th>
