--- a/source/java/admin-webapp/src/scripts/volumes/create/snapshotPolicy.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/snapshotPolicy.html
@@ -2,12 +2,12 @@
 
     <section class="summary-form-section">
         <div class="header">
-            <span>Snapshot Policy</span>
+            <span translate>volumes.l_snapshot_policy</span>
         </div>
 
         <div class="summary-row" ng-show="!editing">
             <div>
-                <span>Policy:</span>
+                <span translate>volumes.f_policy</span>
                 <span class="value">{{summaryText}}</span>
             </div>
 
@@ -24,7 +24,7 @@
             </div>
 
             <div>
-                <button class="btn btn-primary" ng-click="done()">Done</button>
+                <button class="btn btn-primary" ng-click="done()" translate>common.l_done</button>
             </div>
         </div>
 
