--- a/source/java/admin-webapp/src/scripts/activity/activity.html
+++ b/source/java/admin-webapp/src/scripts/activity/activity.html
@@ -3,13 +3,13 @@
     <div class="coming-soon-parent" ng-show="!isAllowed( 'SYS_MGMT' )">
         <div class="coming-soon-child">
             <div style="">
-                <span style="color: white;">Coming soon...</span>
+                <span style="color: white;" translate>common.coming_soon</span>
             </div>
         </div>
     </div>
 
     <div class="header top-label">
-        <span>System Activity</span>
+        <span translate>activities.header</span>
     </div>
 
     <div class="page-vertical-spacer"></div>
