--- a/source/java/admin-webapp/src/scripts/tenants/tenants.html
+++ b/source/java/admin-webapp/src/scripts/tenants/tenants.html
@@ -4,8 +4,8 @@
         <div>
             <div>
                 <div class="header">
-                    <span>Tenants</span>
-                    <a ng-click="createNewTenant()" class="pull-right create-tenant-link">Create a Tenant</a>
+                    <span translate>tenants.title</span>
+                    <a ng-click="createNewTenant()" class="pull-right create-tenant-link" translate>tenants.l_create_tenant</a>
                 </div>
             </div>
         </div>
@@ -24,7 +24,7 @@
         <table class="default tenant-table">
             <thead>
                 <th><tri-state-check check-state="checkall"/></th>
-                <th>Tenant Name</th>
+                <th translate>tenants.l_tenant_name</th>
                 <th></th>
             </thead>
             <tboday>
