--- a/source/java/admin-webapp/src/scripts/volumes/volumes.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumes.html
@@ -8,14 +8,14 @@
                     <div class="volume-edit-container" ng-class="{open: editing}">
                         <section>
                             <div>
-                                <span class="light-print">Priority:</span>
+                                <span class="light-print" translate>volumes.f_priority</span>
                                 <span class="volume-edit-label">{{priority}}</span>
                             </div>
                             <fui-slider values="priorityOptions" value="priority" min-label="Low" max-label="High"></fui-slider>
                         </section>
                         <section>
                             <div style="margin-bottom: 8px;">
-                                <span class="light-print">IOPs Capacity Guarantee:</span>
+                                <span class="light-print" translate>volumes.f_iops_guarantee</span>
                                 <span class="volume-edit-label" ng-show="capacity != 0">{{capacity}}%</span>
                                 <span class="volume-edit-label" ng-show="capacity == 0">None</span>
                             </div>
@@ -23,15 +23,15 @@
                         </section>
                         <section>
                             <div style="margin-bottom: 8px;">
-                                <span class="light-print">IOPs Limit:</span>
+                                <span class="light-print" translate>volumes.f_iops_limit</span>
                                 <span class="volume-edit-label">{{iopLimit}}</span>
                             </div>
                             <fui-slider min="0" max="3000" step="100" value="iopLimit" min-label="None" max-label="3000"></fui-slider>
                         </section>
                     </div>
                     <div class="pull-right">
-                        <button class="btn btn-primary" ng-click="save()">Save</button>
-                        <button class="btn btn-secondary" ng-click="cancel()">Cancel</button>
+                        <button class="btn btn-primary" ng-click="save()" translate>common.l_save</button>
+                        <button class="btn btn-secondary" ng-click="cancel()" translate>common.l_cancel</button>
                     </div>
                 </td>
             </tr>
@@ -43,8 +43,8 @@
 
         <div class="header volumes">
             <span>{{name}}</span>
-            <span>Volumes</span>
-            <a ng-click="createNewVolume()" class="pull-right new_volume">Create a Volume</a>
+            <span translate>volumes.title</span>
+            <a ng-click="createNewVolume()" class="pull-right new_volume" translate>volumes.l_create_volume</a>
         </div>
 
         <div class="">
@@ -52,15 +52,15 @@
             <div class="table-container">
                 <table class="default volumes clickable" style="margin-bottom: 48px;">
                     <thead>
-                        <th>Performance</th>
-                        <th>Name</th>
-                        <th>Data Type</th>
+                        <th translate>volumes.th_performance</th>
+                        <th translate>common.th_name</th>
+                        <th translate>volumes.th_data_type</th>
                         <th>
-                            <div>Capacity</div>
-                            <div>Used/Limit</div>
+                            <div translate>volumes.th_capacity</div>
+                            <div translate>volumes.th_used_limit</div>
                         </th>
-                        <th>IOPs Capacity Garauntee</th>
-                        <th class="priority">Priority</th>
+                        <th translate>volumes.th_iops_guarantee</th>
+                        <th class="priority" translate>volumes.th_priority</th>
                         <th></th>
                     </thead>
                     <tbody>
@@ -85,7 +85,7 @@
 
                             <td class="iopLimit">
                                 <span ng-show="volume.sla != 0">{{ volume.sla }}%</span>
-                                <span ng-show="volume.sla == 0">None</span>
+                                <span ng-show="volume.sla == 0" translate>common.l_none</span>
                             </td>
 
                             <td class="priority">
@@ -102,8 +102,8 @@
                             </td>
                         </tr>
                         <tr class="disabled" ng-show="!volumes.length || volumes.length === 0">
-                            <td colspan="100%">
-                                There are no registered volumes.
+                            <td colspan="100%" translate>
+                                volumes.desc_no_volumes
                             </td>
                         </tr>
                     </tbody>
