--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -57,6 +57,7 @@
     <script type="text/javascript" src="scripts/volumes/create/nameTypeController.js"></script>
     <script type="text/javascript" src="scripts/system/systemController.js"></script>
     <script type="text/javascript" src="scripts/volumes/create/qualityOfServiceController.js"></script>
+    <script type="text/javascript" src="scripts/volumes/create/cloneController.js"></script>
     <script type="text/javascript" src="scripts/inbox/inboxController.js"></script>
     <script type="text/javascript" src="scripts/activity/activityController.js"></script>
     <script type="text/javascript" src="scripts/status/statusController.js"></script>
@@ -81,10 +82,12 @@
     <script type="text/javascript" src="scripts/directives/widgets/navitem/navitem.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/slidewindowstack/slidewindowstack.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/tristatecheck/tristatecheck.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/fds-radio/fds-radio.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-checkbox/fui-checkbox.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-dropdown/fui-dropdown.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-input/fui-input.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-slider/fui-slider.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/treegrid/treegrid.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/spinner/spinner.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/linkbuttons/linkbuttons.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/statustile/statusTile.js"></script>
