Added functionality to graphs and global error handling to services

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -35,6 +35,7 @@
     
     <script type="text/javascript" src="scripts/module-manifest.js"></script>
 
+    <script type="text/javascript" src="scripts/services/utils/http_helper.js"></script>
     <script type="text/javascript" src="scripts/services/admin/authorization.js"></script>
     <script type="text/javascript" src="scripts/services/admin/authentication.js"></script>
     <script type="text/javascript" src="scripts/services/items/volume_api.js"></script>
