--- a/source/java/admin-webapp/src/scripts/volumes/create/clone.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/clone.html
@@ -4,7 +4,7 @@
         <span class="light-print" translate>volumes.l_starting_point</span>
     </div>
     
-    <div class="flex to-clone-or-not">
+    <div class="to-clone-or-not">
         <fds-radio ng-model="volumeVars.toClone" value="new" name="clone" label="{{ 'volumes.l_create_blank_volume' | translate }}"></fds-radio>
         <fds-radio ng-model="volumeVars.toClone" value="clone" name="clone" label="{{ 'volumes.l_clone_existing' | translate }}"></fds-radio>
 <!--
