--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -15,20 +15,24 @@
 
             </div>
             <div class="tile-parent">
-                <div class="capacity-tile tile"></div>
+<!--                <div class="capacity-tile tile"></div>-->
+                <status-tile tile-title="{{ 'status.l_capacity' | translate }}" bold-number="62"
+                    description="what what what what">
+                    <line-chart data="capacityStats" colors="fakeCapColors" opacities="fakeOpacities" suffix="Tb" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText"></line-chart>
+                </status-tile>
             </div>
         </div>
         <div class="tile-pair">
             <div class="tile-parent">
 <!--                <div class="performance-tile tile"></div>-->
-                <status-tile tile-title="Performance" bold-number="23"
+                <status-tile tile-title="{{ 'status.l_performance' | translate }}" bold-number="23"
                     description="what what what what">
-                    <line-chart data="performanceStats" colors="fakeColors" opacities="fakeOpacities"></line-chart>
+                    <line-chart data="performanceStats" colors="fakeColors" opacities="fakeOpacities" suffix="IOPs" axis-color="#A0A0A0"></line-chart>
                 </status-tile>
             </div>
             <div class="tile-parent">
 <!--                <div class="firebreak-tile tile"></div>-->
-                <status-tile tile-title="Firebreak" bold-number="firebreakStats.summaryData.hoursSinceLastEvent"
+                <status-tile tile-title="{{ 'status.l_firebreak' | translate }}" bold-number="firebreakStats.summaryData.hoursSinceLastEvent"
                     description="{{ 'status.desc_firebreak' | translate }}">
                     <treemap data="firebreakStats.series[0]" tooltip="setFirebreakToolipText" color-property="secondsSinceLastFirebreak"></treemap>
                 </status-tile>
