--- a/source/java/admin-webapp/src/scripts/volumes/volumes.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumes.html
@@ -16,7 +16,7 @@
                     <thead>
                         <th translate>volumes.th_performance</th>
                         <th translate>common.th_name</th>
-                        <th translate>volumes.th_data_type</th>
+                        <th translate>common.th_data_type</th>
                         <th>
                             <div translate>volumes.th_capacity</div>
                             <div translate>volumes.th_used_limit</div>
