adding the new icomoon font for images

--- a/source/java/admin-webapp/src/scripts/volumes/create/clone.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/clone.html
@@ -15,7 +15,7 @@
     
     <div class="flex" ng-show="choosing === false && volumeVars.toClone === 'clone'">
         <div>Clone from {{selectedItem.name}}</div>
-        <span class="icon fui-new" ng-click="choosing = true"></span>
+        <span class="icon icon-pencil" ng-click="choosing = true"></span>
     </div>
     
     <div ng-show="volumeVars.toClone === 'clone' && choosing === true">
