--- a/source/java/admin-webapp/src/scripts/volumes/volumes.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumes.html
@@ -58,7 +58,7 @@
                             <td class="button-group">
                                 <div class="inline">
                                     <span class="fui-windows" ng-click="takeSnapshot( $event, volume )" title="Take snapshot"></span>
-                                    <span class="fui-new" ng-click="edit( $event, volume )" title="Edit settings"></span>
+                                    <span class="icon-pencil" ng-click="edit( $event, volume )" title="Edit settings"></span>
                                     <!--<span class="fui-cross" ng-click="delete( volume )" title="Delete volume"></span>-->
                                 </div>
                             </td>
