--- a/source/java/admin-webapp/src/scripts/volumes/create/qualityOfService.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/qualityOfService.html
@@ -3,7 +3,7 @@
     <div class="header">
         <span translate>volumes.l_qos</span>
         <div class="pull-right" ng-click="editing = true" ng-show="editing == false">
-            <span class="icon fui-new"></span>
+            <span class="icon icon-pencil"></span>
         </div>
     </div>
 
