--- a/source/java/admin-webapp/src/scripts/volumes/create/snapshotPolicy.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/snapshotPolicy.html
@@ -3,7 +3,7 @@
     <div class="header">
         <span translate>volumes.l_snapshot_policy</span>
         <div class="pull-right" ng-click="editing = true" ng-show="editing == false">
-            <span class="icon fui-new edit-snapshot-policies"></span>
+            <span class="icon icon-pencil edit-snapshot-policies"></span>
         </div>
     </div>
     
